# tree-iptv-player

./: README.md  dev.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChannelList.vue  EPGDisplay.vue  EPGSubscriptionForm.vue  HlsPlayer.vue  SubscriptionForm.vue  SubscriptionList.vue
src/types/: index.ts
src/utils/: epgParser.ts  subscription.ts  tauriApi.ts
